fix instructions ordering

--- a/stradtest.html
+++ b/stradtest.html
@@ -206,7 +206,13 @@
                   The test consists of 14 draggable sample columns
                   which each represent 1 minute long solo violin
                   performance from the beginning of Sibelius' violin
-                  concerto. A sample column consists of 5 small boxes
+                  concerto.
+                  <br><br>
+                  <b><i>Your task is to place the sample columns in
+                  preference order from right to left based on how
+                  good you consider the violin sound to be.</i></b>
+                  <br><br>
+                  A sample column consists of 5 small boxes
                   on top of each other with different functionality.
 		  <br><br>
 		  From the top part (with identifying alphabet) you
@@ -219,16 +225,10 @@
 		  <br><br>
 		  Howering over the bottom part opens a text box where
 		  you can write notes to help your
-		  evaluation.<b><The notes are actually very important
+		  evaluation. <b>The notes are actually very important
 		  for the study so please use them to describe the
 		  sound and help yourself to remember your evaluation
 		  of individual instrument.</b>
-		  <br><br>
-		  The samples are played with different high quality
-		  violins and
-                  <b><i> your task is to place the sample columns in
-                  preference order from right to left based on how
-                  good you consider the violin sound to be.</i></b>
 		  <br><br>
                   Below is an example of a sample column. Before starting
                   the actual experiment, mouse over the sample column's
