--- a/stradtest.html
+++ b/stradtest.html
@@ -275,7 +275,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea id="tf1sampletext" cols="20" rows="10" style="display:none"></textarea>
+			  <textarea id="tf1sampletext" cols="20" rows="10" maxlength="300" style="display:none"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -342,7 +342,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf1textname" id="tf1text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf1textname" id="tf1text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -386,7 +386,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf2textname" id="tf2text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf2textname" id="tf2text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -430,7 +430,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf3textname" id="tf3text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf3textname" id="tf3text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -474,7 +474,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf4textname" id="tf4text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf4textname" id="tf4text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -518,7 +518,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf5textname" id="tf5text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf5textname" id="tf5text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -562,7 +562,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf6textname" id="tf6text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf6textname" id="tf6text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -606,7 +606,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf7textname" id="tf7text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf7textname" id="tf7text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -650,7 +650,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf8textname" id="tf8text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf8textname" id="tf8text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -694,7 +694,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf9textname" id="tf9text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf9textname" id="tf9text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -738,7 +738,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf10textname" id="tf10text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf10textname" id="tf10text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -782,7 +782,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf11textname" id="tf11text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf11textname" id="tf11text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -826,7 +826,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf12textname" id="tf12text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf12textname" id="tf12text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -870,7 +870,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf13textname" id="tf13text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf13textname" id="tf13text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
@@ -914,7 +914,7 @@
 		      <div class="inner2">
 			<img src="pictures/pencil.svg" width="100%" height="100%"/>
 			<div class="inner">
-			  <textarea name="tf14textname" id="tf14text" cols="20" rows="10" style="display:none" form="stradtesti"></textarea>
+			  <textarea name="tf14textname" id="tf14text" cols="20" rows="10" maxlength="300" style="display:none" form="stradtesti"></textarea>
 			</div>
 		      </div>
 		    </div>
