make data policy text more clear

--- a/stradtest.html
+++ b/stradtest.html
@@ -86,39 +86,52 @@
 
             <div class="testbox">
 
-                  <h3>Data policy of the study, please read!</h3>
+                  <h3>Data policy (please read)</h3>
                 <p>
-                  <b>Pricipal researcher and data controller:</b><br>
-                  Jaska Uimonen<br>
-                  jaska.uimonen@helsinki.fi<br>
-                  University of Helsinki, Faculty of Arts, Musicology<br><br>
+                  <b>Pricipal researcher and data controller:</b>
+                  <ul style="list-style-type:none">
+                  <li>Jaska Uimonen
+                  <li>jaska.uimonen@helsinki.fi<br>
+                  <li>University of Helsinki, Faculty of Arts, Musicology</ul>
 
-                  <b>Purpose of this study:</b><br>
-                  The purpose of this listening test is to explore the features
-                  used in evaluation of violin sound quality.<br><br>
+                  <b>Purpose of this study:</b>
+                  <ul style="list-style-type:none">
+                  <li>The purpose of this listening test is to explore the features
+                  used in evaluation of violin sound quality.</ul>
 
                   <b>Data collection:</b><br>
-                  There will be 3 different types of data gathered in the study:<br>
-                  1) Background information about test subject's violin playing experience<br>
-                  2) The test subjects preference order of listening test's audio samples<br>
-                  3) The written notes test subject possibly writes during the evaluation<br><br>
-
-                  Direct personal data:<br>
-                  Direct personal data or computer ip addresses are <i>not</i> gathered.<br><br>
-
-                  Indirect personal data:<br>
-                  As the written notes could contain stylistic signatures it
-                  might be possible for someone (for example professional colleague
-                  of the test subject) to identify the subject later on. However,
-                  this is unlikely.<br><br>
-
-                  <b>Archiving and usage of the gathered data:</b><br>
-                  The data is to be made publicly available after the study for
-                  other researchers to verify the results and conduct further studies.<br><br>
-
-                  <b>Copyright:</b><br>
-                  By participating this study you give the author (Jaska Uimonen)
-                  copyright to the data and permission to control and use it.
+                  <ul style="list-style-type:none">
+                    <li>There will be 3 different types of data gathered in the study:
+                      <ol type="1">
+                  <li>Background information about test subject's violin playing experience
+                  <li>The test subjects preference order of listening test's audio samples
+                  <li>The written notes test subject possibly writes during the evaluation</ol>
+                  <br>
+                    <li><b>Direct personal data:</b>
+                      <ul style="list-style-type:none">
+                        Direct personal data or computer ip addresses are <i>not</i> gathered.
+                      </ul>
+                      <br>
+                  <li><b>Indirect personal data:</b>
+                    <ul style="list-style-type:none">
+                      As the written notes could contain stylistic signatures it
+                      might be possible for someone (for example professional colleague
+                      of the test subject) to identify the subject later on. However,
+                      this is unlikely.
+                    </ul>
+                  </ul>
+                  
+                  <b>Archiving and usage of the gathered data:</b>
+                  <ul style="list-style-type:none">
+                    The data is to be made publicly available after the study for
+                    other researchers to verify the results and conduct further studies.
+                  </ul>
+                  
+                  <b>Copyright:</b>
+                  <ul style="list-style-type:none">
+                    By participating this study you give the author (Jaska Uimonen)
+                    copyright to the data and permission to control and use it.
+                  </ul>
                   <br>
                 <p>
 
