--- a/stradtest.html
+++ b/stradtest.html
@@ -238,7 +238,7 @@
 		  <br><br>
 		  Howering over the bottom part opens a text box where
 		  you can write notes to help your
-		  evaluation. <b>The notes are actually very important
+		  evaluation. <b>The written notes are actually very important
 		  for the study so please use them to describe the
 		  sound and help yourself to remember your evaluation
 		  of individual instrument.</b>
