add https addresses

--- a/thankyou.html
+++ b/thankyou.html
@@ -26,7 +26,7 @@
 
       <div class="testbox">
 	<br>
-         <a href="http://www.kuuntelutesti.fi">..or go back to test main page</a> 
+         <a href="https://www.kuuntelutesti.fi">..or go back to test main page</a>
 	<br>
 	<br>
       </div>
