--- a/thankyou_footer.html
+++ b/thankyou_footer.html
@@ -1,6 +1,6 @@
 You may now close this window...
 <br>
-         <a href="http://www.kuuntelutesti.fi">...or go back to test main page</a> 
+         <a href="https://www.kuuntelutesti.fi">...or go back to test main page</a>
 	<br>
 	<br>
       </div>
