--- a/stradtest.html
+++ b/stradtest.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Online violin listening test </title>
-        <script src="http://code.jquery.com/jquery-2.2.0.js"></script>
-	<script src="http://code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	<script src="https://code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
 	<script src="js/jquery.ui.touch-punch.min.js"></script>
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
 
 	<link rel="stylesheet" type="text/css" href="stradstyle.css">
 
